[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimeracat"
version = "0.2.1"
description = "ChimeraCat (ccat) - The smart code concatenator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Scott VR", email = "scottvr@paperclipmaximizer.ai"}
]
dependencies = [
    "phart",
]

[project.scripts]
ccat = "chimeracat.chimeracat:cli_main"

[tool.hatch.build]
packages = ["src/chimeracat"]
